// file: pkg/metrics/grpc_histogram.go
// version: 1.0.0
// guid: d1e2f3g4-h5i6-7890-j1k2-l3m4n5o6p7q8

package metrics

import (
	"context"

	"github.com/jdfalk/gcommon/pkg/metrics/proto"
)

// grpcHistogram implements Histogram interface using gRPC service
type grpcHistogram struct {
	client  proto.MetricsServiceClient
	name    string
	tags    []Tag
	help    string
	buckets []float64
}

// Observe adds a single observation to the histogram
func (h *grpcHistogram) Observe(value float64) {
	// Convert tags to protobuf format
	protoTags := make(map[string]string)
	for _, tag := range h.tags {
		protoTags[tag.Key] = tag.Value
	}

	// Create histogram value
	histogramValue := &proto.HistogramValue{}
	histogramValue.SetCount(1)
	histogramValue.SetSum(value)

	// Set buckets if configured
	if len(h.buckets) > 0 {
		buckets := make([]*proto.HistogramBucket, len(h.buckets))
		for i, boundary := range h.buckets {
			bucket := &proto.HistogramBucket{}
			bucket.SetUpperBound(boundary)
			bucket.SetCumulativeCount(0) // This would need proper bucket counting in a real implementation
			buckets[i] = bucket
		}
		histogramValue.SetBuckets(buckets)
	}

	// Create metric data
	metricData := &proto.MetricData{}
	metricData.SetName(h.name)
	metricData.SetType(proto.MetricType_METRIC_TYPE_HISTOGRAM)
	metricData.SetLabels(protoTags)

	// Create metric value
	metricValue := &proto.MetricValue{}
	metricValue.SetHistogramValue(histogramValue)
	metricData.SetValues([]*proto.MetricValue{metricValue})

	// Create request
	req := &proto.RecordMetricRequest{}
	req.SetMetric(metricData)

	// Fire and forget - we don't wait for response in performance-critical path
	go func() {
		_, _ = h.client.RecordMetric(context.Background(), req)
	}()
}

// WithTags returns a new histogram with the given tags
func (h *grpcHistogram) WithTags(tags ...Tag) Histogram {
	return &grpcHistogram{
		client:  h.client,
		name:    h.name,
		tags:    append(h.tags, tags...),
		help:    h.help,
		buckets: h.buckets,
	}
}

// Snapshot returns a snapshot of the histogram
func (h *grpcHistogram) Snapshot() HistogramSnapshot {
	return &grpcHistogramSnapshot{
		histogram: h,
	}
}

// grpcHistogramSnapshot implements HistogramSnapshot
type grpcHistogramSnapshot struct {
	histogram *grpcHistogram
}

// Count returns the number of observations (not implemented for gRPC client)
func (s *grpcHistogramSnapshot) Count() int64 {
	// In a real implementation, this would query the gRPC service
	return 0
}

// Sum returns the sum of all observations (not implemented for gRPC client)
func (s *grpcHistogramSnapshot) Sum() float64 {
	// In a real implementation, this would query the gRPC service
	return 0
}

// Quantile returns the value at the given quantile (not implemented for gRPC client)
func (s *grpcHistogramSnapshot) Quantile(q float64) float64 {
	// In a real implementation, this would query the gRPC service
	return 0
}

// Buckets returns the bucket counts (not implemented for gRPC client)
func (s *grpcHistogramSnapshot) Buckets() map[float64]int64 {
	// In a real implementation, this would query the gRPC service
	return make(map[float64]int64)
}
